tests/reference/asr-constants1-5828e8a.stderr
semantic error: Unexpected number of args, Int takes 2 arguments, found 1
  --> tests/constants1.py:90:9
   |
90 |     a = int()
   |         ^^^^^ 
